syntax = "proto3";

option csharp_namespace = "PDM.TestUtils.ProtoBuf";

message TwoFields {
  string StringValue = 5;
  int32 IntegerValue = 15;
}
